post initial swagger:
